fixed get che keywords