@@ -6,6 +6,9 @@ if [ -z "$JREBEL_HOME" ] ; then
 fi
 
 JREBEL_OPTS="-noverify -javaagent:$JREBEL_HOME/jrebel.jar"
-export MAVEN_OPTS="$JREBEL_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -Djeeves.configuration.overrides.file=/WEB-INF/override-config-jeichar.xml"
+DEBUG="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
+OVERRIDES="-Djeeves.configuration.overrides.file=/WEB-INF/override-config-jeichar.xml"
+MEMORY="-XX:MaxPermSize=256m -Dmx1GM"
+export MAVEN_OPTS="$JREBEL_OPTS $DEBUG $OVERRIDES $MEMORY"
 
 mvn compile test jetty:run
